--- a/style.css
+++ b/style.css
@@ -21,13 +21,13 @@ h1{
 }
 ul{
     width: auto;
-    margin-left: 50%;
+    margin-left: 45%;
     margin-top: 15px;
 
 }
 li{
     display: inline-block;
-    padding: 20px 35px;
+    padding: 20px 30px;
 }
 
 /* nav end here */
@@ -57,17 +57,6 @@ li{
 .banner-width img{
     width: 80%;
 }
-.half-width{
-    width: 50%;
-    padding: 7% 7%;
-}
-.half-width img{
-    width: 50%;
-    height: 100%;
-    padding: 2% 7%;
-    margin-left: 250px;
-}
-
 
 .order-btn{
     background-image: linear-gradient(to right,#f1965e, #f55932);
@@ -82,6 +71,16 @@ li{
 
 
 /* About section start here */
+.half-width{
+    width: 50%;
+    padding: 7% 7%;
+}
+.half-width img{
+    width: 50%;
+    height: 100%;
+    padding: 5% 0;
+    margin-left: 250px;
+}
 .about-banner{
     display: flex;
     background-image: url(images/shapes/7.png);
@@ -95,6 +94,7 @@ li{
 .about-banner p{
     font-size: 20px;
     color:#828282;
+    width: 90%;
     line-height: 1.7em;
     padding-bottom: 70px;
 }
@@ -170,11 +170,6 @@ li{
     text-align: justify;
 }
 
-
-
-
-
-
 /* reviews section end */
 
 
@@ -185,6 +180,9 @@ li{
     padding: 20px 70px;
    
 
+}
+.social img{
+    width: 70px;
 }
 .social-shadow{
     padding: 50px;
