--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body{
     padding: 0;
     font-family: 'Montserrat', sans-serif;
 }
+
 .orange-color{
     color: #FC8F49;
 }
@@ -146,7 +147,7 @@ li{
 }
 .box-reviews{
     width: 400px;
-    height: 460px;
+    height: 520px;
     line-height: 1.7em;
     display: inline-block;
     margin-left: 4%;
@@ -169,7 +170,12 @@ li{
     padding: 0 5%;
     text-align: justify;
 }
-
+.checked {
+    color: orange;
+  }
+  .star-review{
+    font-size: 25px;
+  }
 /* reviews section end */
 
 
